Mon Nov 10 12:39:18 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * NEWS:
          Updated.

Thu Nov  6 19:45:38 UTC 2014  Johnny Willemsen  <willemsen_j@remedy.nl>

        * bin/MakeProjectCreator/config/vc_warnings.mpb:
          Visual Studio 2013 Update 3 gives a lot of warnings on deprecated
          ascii winsock calls but they just work, so no need to change our
          code. Added new feature vc_avoid_winsock_warnings which is enabled
          by default, this adds _WINSOCK_DEPRECATED_NO_WARNINGS to the
          compiler falgs. If you want to see all warnings, set
          vc_avoid_winsock_warnings to 0 in your default.features file before
          generatin the project files

Tue Nov  4 14:37:56 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * etc/ace_inet.doxygen:
        * etc/ace_qos.doxygen:
        * etc/ace_rmcast.doxygen:
        * etc/ace_ssl.doxygen:
        * etc/acexml.doxygen:
          Set UML_LOOK to NO, with UML look all members/methods are shown
          in the diagrams making them unusable

Mon Nov  3 12:50:28 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * ace/WIN32_Asynch_IO.cpp:
          Do not pass holder for bytes written when using OVERLAPPED IO.
          Pass NULL instead. Recommended by MSDN.

        * tests/Proactor_File_Test.cpp:
          Circumvent problems with unreliable Async IO on older Win32
          (WinXP, Win2003/2008).

Fri Oct 31 14:10:52 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          No need for lsb

Fri Oct 31 13:49:11 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * ace/WIN32_Asynch_IO.h:
        * ace/WIN32_Asynch_IO.cpp:
          Changed ACE_WIN32_Asynch_Write classes to not use shared_write() method
          for Stream and File IO but use specific write() implementations instead.
          This fixes Asynch File IO support (specifically writing) for Windows.
          Fixes Bugzilla #3762 and #3992.
