@@ -1,3 +1,8 @@
+Mon Nov 10 15:45:42 UTC 2014  Johnny Willemsen  <willemsen_j@remedy.nl>
+
+        * ace/CDR_Stream.h:
+          Doxygen fixes
+
 Mon Nov 10 12:39:18 UTC 2014  Martin Corino  <mcorino@remedy.nl>
 
         * NEWS:
